--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,3 +22,4 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
+      - run: echo Done
