--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
 
       - setup_remote_docker
-      - run: Docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+      - run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
       - run:
           name: 'Build docker image and push to docker hub'
           command: |
