--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
       - run:
           name: 'Build docker image and push to docker hub'
           command: |
-            cp Dcokerfile.production Dcokerfile
+            cp Dockerfile.production Dcokerfile
             docker build -t opasmails/example-docdjs-circle:latest .
             docker build -t opasmails/example-docdjs-circle:${CIRCLE_SHA1} .
             docker push opasmails/example-docdjs-circle:latest
