--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,8 @@ jobs:
             fi
       - run:
           name: 'Call to rancher to deploy'
-          command: docker run --rm -it \
+          command: |
+            docker run --rm -it \
             -e CATTLE_ACCESS_KEY="$CATTLE_ACCESS_KEY" \
             -e CATTLE_SECRET_KEY="$CATTLE_SECRET_KEY" \
             -e CATTLE_URL="$CATTLE_URL" \
@@ -51,5 +52,4 @@ jobs:
             --imageUuid 'docker:opasmails/example-nodejs-circle:latest' \
             --batch_size 3 --start_first \
             --auto_complete --time 600 \
-            /
       - run: echo Done
