--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,12 +18,34 @@ jobs:
             - v1-dependencies-
       - run: npm install
   test:
+    docker:
+      # specify the version you desire here
+      - image: circleci/node:8.11.1-stretch
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "package.json" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
     - run: npm run test
     - save_cache:
         paths:
           - node_modules
         key: v1-dependencies-{{ checksum "package.json" }}
   ship:
+    docker:
+      # specify the version you desire here
+      - image: circleci/node:8.11.1-stretch
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "package.json" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
     - setup_remote_docker
     - run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
     - run:
