--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,6 @@ jobs:
       - run: npm install
   test:
     docker:
-      # specify the version you desire here
       - image: circleci/node:8.11.1-stretch
     working_directory: ~/repo
     steps:
@@ -29,7 +28,8 @@ jobs:
             - v1-dependencies-{{ checksum "package.json" }}
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
-    - run: npm run test
+      - run: npm install
+      - run: npm run test
     - save_cache:
         paths:
           - node_modules
