--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,15 +65,26 @@ jobs:
               echo "This is ${CIRCLE_BRANCH}"
             fi
   deploy:
-    - run:
-        name: 'Call to rancher to deploy'
-        command: |
-          docker run --rm -it \
-          -e CATTLE_ACCESS_KEY="$CATTLE_ACCESS_KEY" \
-          -e CATTLE_SECRET_KEY="$CATTLE_SECRET_KEY" \
-          -e CATTLE_URL="$CATTLE_URL" \
-          etlweather/gaucho upgrade $RANCHER_EXAMPLE_NODEJS \
-          --imageUuid 'docker:opasmails/example-docdjs-circle:latest' \
-          --batch_size 3 --start_first \
-          --auto_complete --timeout 600 \
-    - run: echo Done
+    docker:
+      # specify the version you desire here
+      - image: circleci/node:8.11.1-stretch
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "package.json" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
+      - run:
+          name: 'Call to rancher to deploy'
+          command: |
+            docker run --rm -it \
+            -e CATTLE_ACCESS_KEY="$CATTLE_ACCESS_KEY" \
+            -e CATTLE_SECRET_KEY="$CATTLE_SECRET_KEY" \
+            -e CATTLE_URL="$CATTLE_URL" \
+            etlweather/gaucho upgrade $RANCHER_EXAMPLE_NODEJS \
+            --imageUuid 'docker:opasmails/example-docdjs-circle:latest' \
+            --batch_size 3 --start_first \
+            --auto_complete --timeout 600 \
+      - run: echo Done
