--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,22 +18,24 @@ jobs:
             - v1-dependencies-
       - run: npm install
   test:
-    docker:
-      - image: circleci/node:8.11.1-stretch
-    working_directory: ~/repo
-    steps:
-      - checkout
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "package.json" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
-      - run: npm install
-      - run: npm run test
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
+      requires:
+        build
+        docker:
+          - image: circleci/node:8.11.1-stretch
+        working_directory: ~/repo
+        steps:
+          - checkout
+          - restore_cache:
+              keys:
+                - v1-dependencies-{{ checksum "package.json" }}
+                # fallback to using the latest cache if no exact match is found
+                - v1-dependencies-
+          - run: npm install
+          - run: npm run test
+          - save_cache:
+              paths:
+                - node_modules
+              key: v1-dependencies-{{ checksum "package.json" }}
   ship:
     docker:
       # specify the version you desire here
