--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,3 +88,21 @@ jobs:
             --batch_size 3 --start_first \
             --auto_complete --timeout 600 \
       - run: echo Done
+
+workflows:
+  version: 2
+  build_test_ship_deploy:
+    jobs:
+      - build
+      - test:
+          requires: -build
+      - ship:
+          requires:
+            - build
+            - test
+      - deploy:
+        type: approval
+        requires:
+          - build
+          - test
+          - ship
