--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,7 +94,8 @@ workflows:
     jobs:
       - build
       - test:
-          requires: - build
+          requires:
+            - build
       - ship:
           requires:
             - build
